--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -29,6 +29,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Delete</th>
         </tr>
       </thead>
       <tbody>
@@ -36,6 +37,7 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td><form method="POST" action="/urls/<%= url %>/delete"><input  type="submit" class="btn btn-danger" value="delete"/></input></form></td>
           </tr>
         <% } %>
       </tbody>
