added edit button

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -27,6 +27,17 @@
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </div>
+      <div class="">
+        <div class="card-header"> Edit
+        </div> 
+        <div class="card-body"> 
+          <form method="POST" action="/urls/<%= shortURL %>">
+            <lable> New URL: </lable>
+            <input  type="text" name="longURL" class="" value="<%= longURL %>"/></input>
+            <button type = "sumbit" class="btn btn-primary"> Submit </button>
+          </form>
+        </div>
+      </div>
     <div class="card-footer text-muted"></div>
   </div>
   <!-- Bootstrap JS -->
