--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -30,14 +30,16 @@
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
           <th scope="col">Delete</th>
+          <th scope="col">Edit</th>
         </tr>
       </thead>
       <tbody>
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
-            <td><%= urls[url] %></td>
-            <td><form method="POST" action="/urls/<%= url %>/delete"><input  type="submit" class="btn btn-danger" value="delete"/></input></form></td>
+            <td><%= urls[url].longURL %></td>
+            <td><form method="GET" action="/urls/<%= url %>"><input  type="submit" class="btn btn-outline-primary" value="edit"/></input></form></td>
+            <td><form method="POST" action="/urls/<%= url %>/delete"><input  type="submit" class="btn btn-outline-danger" value="delete"/></input></form></td>
           </tr>
         <% } %>
       </tbody>
