--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,6 +9,12 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+        <div class="navbar-nav"> 
+          <form method="POST" action="/login" class = "form-inline float : right">
+            <input  type="text" name="username" class="btn btn-primary" placeholder = "Username"></input>
+            <button type = "sumbit" class="btn btn-outline-secondary"> Login </button>
+          </form>
+        </div>
     </div>
   </nav>
 </header>
