--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,12 +9,21 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-        <div class="navbar-nav"> 
-          <form method="POST" action="/login" class = "form-inline float : right">
-            <input  type="text" name="username" class="btn btn-primary" placeholder = "Username"></input>
-            <button type = "sumbit" class="btn btn-outline-secondary"> Login </button>
-          </form>
-        </div>
     </div>
+      <% if (username) {%>
+      <form method="POST" action="/logout">
+        <p style="display: inline">
+          Logged In: <%= username %>
+        </p>
+        <button type="submit" class="btn btn-warning">Log Out</button>
+      </form>
+        <% } else { %>
+      <form method="POST" action="/login">
+        <div>
+          <input type="text" name="username" placeholder="username" style="height: 35px; width: 150px; margin: 1em; border-radius: 5px; border-width: 2px;">
+          <button type="submit" class="btn btn-warning">Sign In</button>
+        </div>
+      </form>
+      <% } %>
   </nav>
 </header>
