registration form comleted

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,10 +10,10 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-      <% if (username) {%>
+      <% if (userObject) {%>
       <form method="POST" action="/logout">
         <p style="display: inline">
-          Logged In: <%= username %>
+          Logged In: <%= userObject.email %>
         </p>
         <button type="submit" class="btn btn-warning">Log Out</button>
       </form>
