--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -7,37 +7,45 @@
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-success">
-      <a class="navbar-brand" href="/urls">TinyApp</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" href="/urls">My URLs</a>
-          <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        </div>
-      </div>
-    </nav>
-  </header>
+  <%- include('partials/_header') %>
+  <%if (user && user['id'] === userID) {%>
   <div class="card text-center">
-      <div class="card-header"></div>
-      <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
-      </div>
-      <div class="">
-        <div class="card-header"> Edit
-        </div> 
-        <div class="card-body"> 
-          <form method="POST" action="/urls/<%= shortURL %>">
-            <lable> New URL: </lable>
-            <input  type="text" name="longURL" class="" value="<%= longURL %>"/></input>
-            <button type = "sumbit" class="btn btn-primary"> Submit </button>
-          </form>
+    <div class="card-header"></div>
+    <div class="card-body">
+      <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+      <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+      <p class="card-text">Visited: <%= countVisits %> times</a></p>
+      <p class="card-text">Visited: <%= visitors %> times bu unique visitors</a></p>
+      <br
+      <table>
+        <thead>
+          <tr>
+            <th scope="col">Visitor ID</th>
+            <th scope="col">Date</th>
+          </tr>
+          <% for(let v in visits) { %>
+          <tr>
+            <th scope="col"><%= visits[v]['id'] %></th>
+            <th scope="col"><%= visits[v]['date'] %></th>
+          </tr>
+        <% } %>
+    </table>
+    </div>
+    <div class="card-body">
+        <label for="longURL">Enter the new URL:</label>
+        <form class="form-inline" action="/urls/<%= shortURL %>?_method=PUT" method="POST">
+          <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
         </div>
+          <div class="form-group mb-2">
+            <button type="Update" class="btn btn-primary">Update</button>
+          </div>
+        </form>
       </div>
+      <% } else if (user['id'] !== userID) { %>
+        <h2> You don't have permission to access this URL</h2>
+        <% } else { %>
+        <h2> You should login or register first</h2>
+          <% } %>
     <div class="card-footer text-muted"></div>
   </div>
   <!-- Bootstrap JS -->
