--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,3 +1,4 @@
+
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
@@ -10,18 +11,22 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-      <% if (userObject) {%>
+      <% if (user) {%>
       <form method="POST" action="/logout">
         <p style="display: inline">
-          Logged In: <%= userObject.email %>
+          Logged In: <%= user.email %>
         </p>
         <button type="submit" class="btn btn-warning">Log Out</button>
       </form>
         <% } else { %>
-      <form method="POST" action="/login">
-        <div>
-          <input type="text" name="username" placeholder="username" style="height: 35px; width: 150px; margin: 1em; border-radius: 5px; border-width: 2px;">
-          <button type="submit" class="btn btn-warning">Sign In</button>
+      <form method="GET" action="/register" class="float-right">
+        <div style="margin-right: 15px;"></div>
+          <button type="submit" class="btn btn-warning">Register</button>
+        </div>
+      </form>
+      <form method="GET" action="/login">
+        <div style="margin-left: 15px;">
+          <button type="submit" class="btn btn-primary">Login</button>
         </div>
       </form>
       <% } %>
