--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -7,34 +8,52 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <title>TinyApp</title>
 </head>
+
 <body>
-  <%- include('partials/_header') %>
+  <header>
+    <%- include('partials/_header') %>
+  </header>
   <main style="margin: 1em;">
     <h3>My URLs</h3>
+    <% if (user) {%>
     <table class="table">
       <thead>
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
-          <th scope="col">Delete</th>
           <th scope="col">Edit</th>
+          <th scope="col">Delete</th>
         </tr>
       </thead>
       <tbody>
-        <% for(let url in urls) { %>
+          <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
             <td><%= urls[url].longURL %></td>
-            <td><form method="GET" action="/urls/<%= url %>"><input  type="submit" class="btn btn-outline-primary" value="edit"/></input></form></td>
-            <td><form method="POST" action="/urls/<%= url %>/delete"><input  type="submit" class="btn btn-outline-danger" value="delete"/></input></form></td>
+            <td>
+              <form method="GET" action="/urls/<%= url %>">
+                <button type="submit" name="edit" class="btn btn-outline-primary">
+                  Edit
+                </button>
+              </form>
+            </td>
+            <td>
+              <form method="POST" action="/urls/<%= url %>/delete">
+                <button type="submit" name="delete" class="btn btn-outline-danger">
+                  Delete
+                </button>
+              </form>
+            </td>
           </tr>
-        <% } %>
+          <% } %>
       </tbody>
     </table>
+    <% } else {%>
+      <p>Please Login or Register First.</p>
+    <% } %>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
-</html>
