--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -7,21 +7,28 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
-    <title>New URL - TinyApp Example</title>
+    <title>Login Page - TinyApp Example</title>
   </head>
 
   <body>
-
-    <%- include('partials/_header') %>
+    <header>
+      <%- include('partials/_header') %>
+    </header>
 
     <main style="margin: 1em;">
-      <h3>Create TinyURL</h3>
-      <form class="form-inline" action="/urls" method="POST">
-        <div class="form-group mb-2">
-          <label for="longURL">Enter a URL:</label>
-          <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
-          <button type="submit" class="btn btn-primary">Submit</button>
+      <h3>Login</h3>
+      <form method="POST" action="/login">
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputEmail4">Email</label>
+            <input type="email" name="email" class="form-control" id="inputEmail4" placeholder="Enter Email">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="inputPassword4">Password</label>
+            <input type="password" name="password" class="form-control" id="inputPassword4" placeholder="Enter Password">
+          </div>
         </div>
+        <button type="submit" class="btn btn-primary">Login</button>
       </form>
     </main>
       <!-- Bootstrap JS -->
