--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,56 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <title>URL - TinyApp Example</title>
-</head>
+<html>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+      crossorigin="anonymous"
+    />
+    <title>URL - TinyApp Example</title>
+  </head>
+  <body>
+    <%- include('./partials/_header'); %>
 
-<body>
-  <%- include('partials/_header') %>
-  <%if (user && user['id'] === userID) {%>
-  <div class="card text-center">
-    <div class="card-header"></div>
-    <div class="card-body">
-      <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-      <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
-      <p class="card-text">Visited: <%= countVisits %> times</a></p>
-      <p class="card-text">Visited: <%= visitors %> times bu unique visitors</a></p>
-      <br
-      <table>
-        <thead>
-          <tr>
-            <th scope="col">Visitor ID</th>
-            <th scope="col">Date</th>
-          </tr>
-          <% for(let v in visits) { %>
-          <tr>
-            <th scope="col"><%= visits[v]['id'] %></th>
-            <th scope="col"><%= visits[v]['date'] %></th>
-          </tr>
-        <% } %>
-    </table>
-    </div>
-    <div class="card-body">
-        <label for="longURL">Enter the new URL:</label>
-        <form class="form-inline" action="/urls/<%= shortURL %>?_method=PUT" method="POST">
-          <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
-        </div>
-          <div class="form-group mb-2">
-            <button type="Update" class="btn btn-primary">Update</button>
-          </div>
+    <div class="card text-center">
+      <div class="card-header"></div>
+      <div class="card-body">
+        <h5 class="card-title">TinyURL for: <%= url.longURL %></h5>
+        <p class="card-text">
+          Short url:
+          <a target="_blank" href="/u/<%= shortURL %>"><%= shortURL %></a>
+        </p>
+        <p>Number of Times Visited: <%=url.visited %></p>
+        <p>Number of Visitors: <%=totalVisitors %></p>
+        <% for(let visit of url.visits) { %>
+        <p>
+          <b>Date of Visit:</b> <%= visit.timestamp %>, <b>Visitor ID:</b> <%=visit.visitor_id
+          %>
+        </p>
+        <%}%>
+      </div>
+      <div class="card-footer text-muted">
+        <form
+          class="form-inline justify-content-center"
+          action="/urls/<%=shortURL%>?_method=PUT"
+          method="POST"
+        >
+          <label for="longURL">New URL</label>
+          <input
+            class="form-control"
+            type="text"
+            placeholder="http://"
+            name="longURL"
+            style="width: 300px; margin: 1em"
+          />
+          <button type="submit" class="btn btn-primary">Update</button>
         </form>
       </div>
-      <% } else if (user['id'] !== userID) { %>
-        <h2> You don't have permission to access this URL</h2>
-        <% } else { %>
-        <h2> You should login or register first</h2>
-          <% } %>
-    <div class="card-footer text-muted"></div>
-  </div>
-  <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+    </div>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
