--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,34 +1,39 @@
-
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-      <% if (user) {%>
-      <form method="POST" action="/logout">
-        <p style="display: inline">
-          Logged In: <%= user.email %>
-        </p>
-        <button type="submit" class="btn btn-warning">Log Out</button>
-      </form>
-        <% } else { %>
-      <form method="GET" action="/register" class="float-right">
-        <div style="margin-right: 15px;"></div>
-          <button type="submit" class="btn btn-warning">Register</button>
-        </div>
-      </form>
-      <form method="GET" action="/login">
-        <div style="margin-left: 15px;">
-          <button type="submit" class="btn btn-primary">Login</button>
-        </div>
-      </form>
-      <% } %>
+
+    <% if(!user) {%>
+    <form class="form-inline" action="/login" style="margin-right: 1em">
+      <button type="submit" class="btn btn-primary">Login</button>
+    </form>
+    <form class="form-inline" action="/register">
+      <button type="submit" class="btn btn-primary">Register</button>
+    </form>
+    <% } else {%>
+    <form class="form-inline" method="POST" action="/logout">
+      <p style="margin: auto; margin-right: 1em">
+        Logged In As: <%=user.email%>
+      </p>
+      <button class="btn btn-outline-dark" type="submit">Logout</button>
+    </form>
+    <%} %>
   </nav>
 </header>
