--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,59 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1 shrink-to-fit=no"
+    />
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  <title>TinyApp</title>
-</head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+      crossorigin="anonymous"
+    />
 
-<body>
-  <header>
-    <%- include('partials/_header') %>
-  </header>
-  <main style="margin: 1em;">
-    <h3>My URLs</h3>
-    <% if (user) {%>
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Short URL</th>
-          <th scope="col">Long URL</th>
-          <th scope="col">Edit</th>
-          <th scope="col">Delete</th>
-        </tr>
-      </thead>
-      <tbody>
-          <% for(let url in urls) { %>
+    <title>TinyApp</title>
+  </head>
+
+  <body>
+    <div><%- include('./partials/_header'); %></div>
+    <main style="margin: 1em">
+      <% if(denied) {%>
+      <div class="alert alert-danger" role="alert">
+        Please only access url's that belong to you
+      </div>
+      <%} else if(doesntExist){%>
+      <div class="alert alert-danger" role="alert">
+        Seems like that shortURL doesnt exist
+      </div>
+      <%} %>
+      <h3>My URLs</h3>
+      <!-- <script type="text/javascript">
+        let user = '<%=user %>'
+        if(!user) {
+          alert('Please make sure to login or register for an account');
+          window.location.replace("/login");
+        }
+      </script> -->
+      <table class="table">
+        <thead>
           <tr>
-            <td><%= url %></td>
+            <th scope="col">Short URL</th>
+            <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for(let url in urls){%>
+          <tr>
+            <td><a href="/urls/<%=url%>"><%= url %></a></td>
             <td><%= urls[url].longURL %></td>
             <td>
-              <form method="GET" action="/urls/<%= url %>">
-                <button type="submit" name="edit" class="btn btn-outline-primary">
-                  Edit
-                </button>
-              </form>
+              <a href="/urls/<%=url%>">
+                <button class="btn btn-outline-primary">Edit</button>
+              </a>
             </td>
             <td>
-              <form method="POST" action="/urls/<%= url %>/delete">
-                <button type="submit" name="delete" class="btn btn-outline-danger">
-                  Delete
-                </button>
+              <form action="/urls/<%=url%>?_method=DELETE" method="POST">
+                <button class="btn btn-outline-danger">Delete</button>
               </form>
             </td>
           </tr>
-          <% } %>
-      </tbody>
-    </table>
-    <% } else {%>
-      <p>Please Login or Register First.</p>
-    <% } %>
-  </main>
-  <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+          <%} %>
+        </tbody>
+      </table>
+    </main>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
