--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -1,44 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-</head>
-<body>
-  <%- include('partials/_header') %>
-  <h1>Create Account</h1>
-<form class="form-inline" action="/register" method="POST">
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+      crossorigin="anonymous"
+    />
 
-  <table>
-    <thead>
-      <tr>
-        <th>  </th>
-      <th >Enter your email</th>
-      <th>
-      <input class="form-control" type="email" name="email" placeholder="email" style="width: 300px; margin: 1em">
-      </th>
-    </tr>
-    <tr>
-      <th>  </th>
-      <th>Enter your password  </th>
-      <th>
-      <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
-      </th>
-    </tr>
-    <tr>
-      <th>  </th><th> </th>
-      <th>
-      <button type="submit" class="btn btn-primary">Register</button>
-      </th>
-    </tr>
-  </thead>
-  </table>
-    </form>
-    <div class="card-footer text-muted"></div>
-  </div>
-  <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <title>New URL - TinyApp Example</title>
+  </head>
+  <body>
+    <%- include('./partials/_header') %>
+
+    <main style="margin: 1em">
+      <h3>Register an Account</h3>
+      <% if(userExists) {%>
+        <div class="alert alert-danger" role="alert">
+          A user with that given email already exists
+        </div>
+      <%}%>
+      <form action="/register" method="POST">
+        <div class="form-group">
+          <label for="name">Enter your name:</label>
+          <input
+            class="form-control"
+            type="text"
+            name="name"
+            placeholder="Name"
+            style="width: 300px; margin: 1em"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input
+            class="form-control"
+            type="email"
+            placeholder="Email"
+            name="email"
+            style="width: 300px; margin: 1em"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input
+            class="form-control"
+            type="password"
+            name="password"
+            placeholder="Password"
+            style="width: 300px; margin: 1em"
+            required
+          />
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
+      </form>
+    </main>
   </body>
-  </html>
+</html>
